// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-document-blueprint-from-document should create document blueprint from existing document 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-blueprint-from-document should handle creating blueprint with parent 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-blueprint-from-document should handle duplicate blueprint name 1`] = `
{
  "content": [
    {
      "text": "Error using create-document-blueprint-from-document:
{
  "message": "Request failed with status code 400",
  "response": {
    "type": "Error",
    "title": "Duplicate name",
    "status": 400,
    "detail": "The supplied name is already in use for the same content type.",
    "operationStatus": "DuplicateName"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-blueprint-from-document should handle non-existent source document 1`] = `
{
  "content": [
    {
      "text": "Error using create-document-blueprint-from-document:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The content could not be found",
    "status": 404,
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;
